2019-08-02  Steve Ellcey  <sellcey@marvell.com>

	* gcc.target/aarch64/simd_pcs_attribute.c: New test.
	* gcc.target/aarch64/simd_pcs_attribute-2.c: Ditto.
	* gcc.target/aarch64/simd_pcs_attribute-3.c: Ditto.

2019-08-02  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/91201
	* gcc.target/i386/sse4_1-pr91201.c: New test.

2019-08-02  Marek Polacek  <polacek@redhat.com>

	PR c++/91230 - wrong error with __PRETTY_FUNCTION__ and generic lambda.
	* g++.dg/cpp1y/lambda-generic-pretty1.C: New test.

2019-08-02  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/91323
	* gcc.dg/torture/pr91323.c: New test.

2019-08-02  Paolo Carlini  <paolo.carlini@oracle.com>

	* g++.dg/cpp1z/nodiscard6.C: New.

2019-08-02  Senthil Kumar Selvaraj  <senthilkumar.selvaraj@microchip.com>

	* gcc.dg/torture/ssa-fre-5.c: Add dg-require-effective-target int32.
	* gcc.dg/torture/ssa-fre-7.c: Likewise.

2019-08-02  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/91201
	* gcc.target/i386/sse2-pr91201-3.c: New test.
	* gcc.target/i386/sse2-pr91201-4.c: New test.
	* gcc.target/i386/sse2-pr91201-5.c: New test.
	* gcc.target/i386/sse2-pr91201-6.c: New test.

2019-08-02  Martin Liska  <mliska@suse.cz>

	* g++.dg/cpp1y/new2.C: New test.

2019-08-02  Senthil Kumar Selvaraj  <senthilkumar.selvaraj@microchip.com>

	* gcc.dg/torture/ssa-fre-6.c: Add dg-require-effective-target int32.

2019-08-02  Kito Cheng  <kito.cheng@sifive.com>

	* g++.dg/lto/pr87906_0.C: Add dg-require-effective-target shared check.

2019-08-01  Martin Sebor  <msebor@redhat.com>

	PR c++/90947
	* c-c++-common/array-1.c: New test.
	* g++.dg/abi/mangle73.C: New test.
	* g++.dg/cpp2a/nontype-class23.C: New test.
	* g++.dg/init/array53.C: New test.

2019-08-01  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/85693
	* gcc.target/i386/pr85693-1.c: New test.

2019-08-01  Matthew Beliveau  <mbelivea@redhat.com>

	PR c++/90590
	* c-c++-common/pr90590-1.c: New test.
	* c-c++-common/pr90590-1.h: New test.
	* c-c++-common/pr90590-2.c: New test.